# Dokumentation

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.cache/mkdocs_puml/BestPro-Dokumentation/: storage.mpack
.github/workflows/: ci.yml
analyse/: index.html
analyse/domaenenmodell/: index.html
analyse/systemsequenzdiagramme/: index.html
anforderungen/: index.html
anforderungen/use-case-details/: index.html
anforderungen/use-cases/: index.html
anforderungen/user-stories/: index.html
dateien/: SUMMARY.txt  index.html
dateien/Fallstudie BestPro/: index.html
docs/: index.md  tags.md
docs/analyse/: domaenenmodell.md  index.md  systemsequenzdiagramme.md
docs/anforderungen/: index.md  use-case-details.md  use-cases.md  user-stories.md
docs/assets/puml-themes/material/: indigo-dark.puml
docs/assets/puml/material/: indigo-light.puml
docs/assets/scripts/: gen_ref_nav.py
docs/entwicklung/: api-testing.md
docs/projekt/: index.md  meilensteine.md  organisation.md
entwicklung/api-testing/: index.html
projekt/: index.html
projekt/meilensteine/: index.html
projekt/organisation/: index.html
search/: search_index.json
tags/: index.html
